tests/baselines/reference/subtypingWithCallSignaturesA.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithCallSignaturesA.ts(2,15): error TS2345: Argument of type '(x: 数字) => 文字' is not assignable to parameter of type '(x: 数字) => 数字'.
  Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithCallSignaturesA.ts (1 errors) ====
    declare function foo3(cb: (x: number) => number): typeof cb;
    var r5 = foo3((x: number) => ''); // error
                  ~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: 数字) => 文字' is not assignable to parameter of type '(x: 数字) => 数字'.
!!! error TS2345:   Type '文字' is not assignable to type '数字'.